<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SearchView
        android:id="@+id/svSearch"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="1dp"
        android:iconifiedByDefault="false"
        android:imeOptions="actionSearch"
        android:queryHint="@string/searchHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/youtube_timer_logo"
        android:elevation="2dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/youtube_timer_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVideoList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svSearch"
        tools:itemCount="20" />
</androidx.constraintlayout.widget.ConstraintLayout>